--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,21 +46,16 @@ services:
     
   frontend:
     container_name: softwarehouse-frontend
-    image: node:20-alpine
+    build:
+      context: ./frontend
     restart: unless-stopped
-    working_dir: /var/www/frontend
     ports:
       - "5173:5173"
-    environment:
-      - VITE_API_URL=http://localhost:8000/api
     volumes:
-      - ./frontend:/var/www/frontend
+      - ./frontend:/app
+      - /app/node_modules
     networks:
       - softwarehouse-network
-    command:
-      - "sh"
-      - "-c"
-      - "npm install && npm run dev -- --host"
 
 networks:
   softwarehouse-network:
