--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,6 +56,10 @@ services:
       - /app/node_modules
     networks:
       - softwarehouse-network
+    command:
+      - "sh"
+      - "-c"
+      - "npm install && npm run dev -- --host 0.0.0.0"
 
 networks:
   softwarehouse-network:
