--- a/.env.example
+++ b/.env.example
@@ -65,3 +65,4 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 VITE_APP_NAME="${APP_NAME}"
 VITE_SERVE_BUILD=false
 VITE_SERVER_HOST=frontend
+VITE_ASSET_URL="${APP_URL}:5173"
